[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labcas.workflow_api"
version = "0.1.0"
description = "REST API to list, describe, trigger, and monitor scientific workflows"
authors = [
    { name = "LABCAS Team" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.2",
    "flask-restx==1.3.0",
    "python-dateutil==2.8.2",
    "requests"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/your-org/workflow-api"

[project.optional-dependencies]
dev = [
    "sphinx",
    "setuptools",
    "swagger-plugin-for-sphinx",
    "sphinx-rtd-theme~=3.0.2",
    "sphinxcontrib-mermaid~=1.0.0",
    "sphinxcontrib-openapi",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["labcas.*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["id", "api"]
